# video-audio-to-texts

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
tests/: conftest.py  test_cli.py  test_formatters.py  test_utils.py  test_vision.py
transcriber/: cli.py  core.py  extractor.py  formatters.py  utils.py  vision.py
